unpackaged/main/default/objects/Carrier_Access_Quote__c/Carrier_Access_Quote__c.object-meta.xml
<CustomObject>
    <label>Carrier Access Quote</label>
    <nameField>
        <displayFormat>CAQ-{000000}</displayFormat>
        <label>Carrier Access Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Access Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>