unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Access_Cost__c.field-meta.xml
<CustomField>
    <fullName>Access_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter access cost exactly as priced on the AT&amp;T Partner Exchange quote.</inlineHelpText>
    <label>Access Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>