unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Access_Speed__c.field-meta.xml
<CustomField>
    <fullName>Access_Speed__c</fullName>
    <label>Access Speed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Access_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T1 (1.544 MB)</fullName>
            </value>
            <value>
                <fullName>2xT1 (3 MB)</fullName>
            </value>
            <value>
                <fullName>3xT1 (4.5 MB)</fullName>
            </value>
            <value>
                <fullName>4xT1 (6 MB)</fullName>
            </value>
            <value>
                <fullName>5xT1 (7.5 MB)</fullName>
            </value>
            <value>
                <fullName>6xT1 (9 MB)</fullName>
            </value>
            <value>
                <fullName>7xT1 (10.5 MB</fullName>
            </value>
            <value>
                <fullName>8xT1 (12 MB</fullName>
            </value>
            <value>
                <fullName>5 Mbps</fullName>
            </value>
            <value>
                <fullName>10 Mbps</fullName>
            </value>
            <value>
                <fullName>20 Mbps</fullName>
            </value>
            <value>
                <fullName>50 Mbps</fullName>
            </value>
            <value>
                <fullName>100 Mbps</fullName>
            </value>
            <value>
                <fullName>250 Mbps</fullName>
            </value>
            <value>
                <fullName>500 Mbps</fullName>
            </value>
            <value>
                <fullName>600 Mbps</fullName>
            </value>
            <value>
                <fullName>1000 Mbps</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>