unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Additional_DNS__c.field-meta.xml
<CustomField>
    <fullName>Additional_DNS__c</fullName>
    <label>Additional DNS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>