unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/AT_T_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Installation_Type__c</fullName>
    <label>AT&amp;T Installation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Tele-Install</fullName>
            </value>
            <value>
                <fullName>Onsite Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>