unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/AT_T_IP_Flexible_Reach_Service__c.field-meta.xml
<CustomField>
    <fullName>AT_T_IP_Flexible_Reach_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AT&amp;T IP Flexible Reach Service</label>
    <type>Checkbox</type>
</CustomField>