unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/AT_T_Managed_Router__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Managed_Router__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AT&amp;T Managed Router</label>
    <type>Checkbox</type>
</CustomField>