unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>