unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Circuit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Cost__c</fullName>
    <formula>Access_Cost__c  +  Port_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circuit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>