unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Circuit_Price__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Price__c</fullName>
    <formula>Access_Price__c  +  Port_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circuit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>