unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Class of Service</label>
    <type>Checkbox</type>
</CustomField>