unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Contract_Profit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Profit__c</fullName>
    <formula>(Net_Circuit_Price__c-Circuit_Cost__c)  *  Term_Numeric__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>