unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Interface_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Type__c</fullName>
    <label>Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Port_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Electrical - 100 Base TX</fullName>
            </value>
            <value>
                <fullName>Optical Single-Mode - 1000 Base LX</fullName>
            </value>
            <value>
                <fullName>Optical Multi-Mode - 1000 Base SX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>