unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Minimum_Bandwidth_Commitment_MBC__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Bandwidth_Commitment_MBC__c</fullName>
    <label>Minimum Bandwidth Commitment (MBC)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Usage_Based_Billing_UBB_with_MBC__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>10 Mbps</fullName>
            </value>
            <value>
                <fullName>20 Mbps</fullName>
            </value>
            <value>
                <fullName>50 Mbps</fullName>
            </value>
            <value>
                <fullName>100 Mbps</fullName>
            </value>
            <value>
                <fullName>250 Mbps</fullName>
            </value>
            <value>
                <fullName>500 Mbps</fullName>
            </value>
            <value>
                <fullName>600 Mbps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>