unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Net_Circuit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Circuit_Price__c</fullName>
    <formula>Circuit_Price__c  -  Circuit_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Circuit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>