unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Non_Recurring_Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Installation_Price__c</fullName>
    <formula>Non_Recurring_Installation_Cost__c  *  Markup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Recurring Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>