unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Port_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Type__c</fullName>
    <label>Port Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Line</fullName>
                <default>true</default>
                <label>Private Line</label>
            </value>
            <value>
                <fullName>Switched Ethernet</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>