unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T Virtual Private Network Service (AVPN)</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Managed Internet Service (MIS)</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Internet Access (DSL / U-Verse)</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Network-Based IP-VPN Remote Access (Requires AVPN)</fullName>
            </value>
            <value>
                <fullName>AVPN (MPLS)</fullName>
                <isActive>false</isActive>
                <label>AVPN (MPLS)</label>
            </value>
            <value>
                <fullName>Internet</fullName>
                <isActive>false</isActive>
                <label>Internet</label>
            </value>
            <value>
                <fullName>MIS</fullName>
                <isActive>false</isActive>
                <label>MIS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>