unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Term_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Term_Numeric__c</fullName>
    <formula>CASE(TEXT(Term__c),
"Monthly",1,
"12",12,
"24",24,
"36",36,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>