unpackaged/main/default/objects/Carrier_Access_Quote__c/fields/Usage_Based_Billing_UBB_with_MBC__c.field-meta.xml
<CustomField>
    <fullName>Usage_Based_Billing_UBB_with_MBC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage-Based Billing (UBB) with MBC</label>
    <type>Checkbox</type>
</CustomField>