unpackaged/main/default/objects/Carrier_Access_Quote__c/validationRules/Access_Speed_Port_Speed_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Access_Speed_Port_Speed_Verification</fullName>
    <active>true</active>
    <description>Access Speed Must be =&gt; than Port Speed</description>
    <errorConditionFormula>Access_Speed_Numeric__c  &lt;  Port_Speed_Numeric__c</errorConditionFormula>
    <errorDisplayField>Access_Speed__c</errorDisplayField>
    <errorMessage>Access speed must be equal to or greater than the port speed.</errorMessage>
</ValidationRule>