unpackaged/main/default/objects/Carrier_Access_Quote__c/validationRules/Port_Type_Matches_Access_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Port_Type_Matches_Access_Type</fullName>
    <active>true</active>
    <description>Port Type Matches Access Type</description>
    <errorConditionFormula>TEXT(Port_Type__c) &lt;&gt; TEXT(Access_Type__c)</errorConditionFormula>
    <errorDisplayField>Access_Type__c</errorDisplayField>
    <errorMessage>The Port Type and the Access Type must be the same.</errorMessage>
</ValidationRule>