unpackaged/main/default/objects/Carrier_Access_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Carrier_Quote_Order_Number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Carrier__c</columns>
    <columns>Product__c</columns>
    <columns>Term_Numeric__c</columns>
    <columns>Access_Type__c</columns>
    <columns>Access_Speed__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>